--- a/deploy/litemall/application-core.yml
+++ b/deploy/litemall/application-core.yml
@@ -1,11 +1,11 @@
 litemall:
   # 开发者应该设置成自己的wx相关信息
   wx:
-    app-id: wxa5b486c6b918ecfb
-    app-secret: e04004829d4c383b4db7769d88dfbca1
+    app-id: wx4e5f7e2bd74f3201
+    app-secret: 197f7e0c6cedbdf913c4d30ce54c8441
     mch-id: 111111
     mch-key: xxxxxx
-    notify-url: http://118.24.0.153:8080/wx/order/pay-notify
+    notify-url: http://111.231.83.51:18080/wx/order/pay-notify
     # 商户证书文件路径
     # 请参考“商户证书”一节 https://pay.weixin.qq.com/wiki/doc/api/wxa/wxa_api.php?chapter=4_3
     key-path: xxxxx
@@ -91,7 +91,7 @@ litemall:
     # 本地对象存储配置信息
     local:
       storagePath: storage
-      address: http://118.24.0.153:8080/wx/storage/fetch/
+      address: http://111.231.83.51:18080/wx/storage/fetch/
     # 阿里云对象存储配置信息
     aliyun:
       endpoint: oss-cn-shenzhen.aliyuncs.com
